# FYP_salm

./: README.md  pyproject.toml  setup.py
algorithm/backend/: admm.py  consensus.py
algorithm/frontend/: factor_gbp.py  factor_ut.py  gbp.py  gbp_new.py  gbp_reference.py  graph_build.py  spbp.py
algorithm/math/: lie.py  sigma.py  spbp.py
configs/: common.yaml  gbp_ut.yaml  slam_common.yaml  ut.yaml
fyp_slam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gtsam_local/: build_gtsam_graph.py  gtsam_builder.py  gtsam_runner.py  loader.py  metrics.py  test.py
results/: gtsam_results_20250630_170738.json
sim/: demo.py  factor_ut_test.py  factorgraph_test.py  graph_build.py  measurement.py  test.py  world.py
tests/: factorgraph_test.py  test_gbp.py
utils/: cfg_loader.py
